vlib/v/checker/tests/struct_field_init_with_nobody_anon_fn_err.out
vlib/v/checker/tests/struct_field_init_with_nobody_anon_fn_err.vv:7:7: error: anonymous function must declare a body
    5 | fn main() {
    6 |     _ = App{
    7 |         cb: fn(x int)  // Note the missing `{}` (the function body) here
      |             ~~~~~~~~~
    8 |     }
    9 | }
